# FUNS-server

./: .gitignore  AuthManager.cpp  AuthManager.h  CMakeLists.txt  Config.h  DBDriver.h  FunsConfig.h  FunsConfig.h.example  FunsServer.cpp  FunsServer.h  MongoConfig.h  MongoDBCollections.h  MongoDriver.cpp  MongoDriver.h  README.md  RESTService.cpp  RESTService.h  Service.cpp  Service.h  Utility.cpp  Utility.h  base64.h  funs.conf.example  main.cpp
api/: Auth.h  FunsResource.h  FunsResourceImpl.h  Schedules.h  SchedulesEven.h  SchedulesID.h  SchedulesOdd.h  SchedulesSubjects.h  SchedulesUnusual.h  Users.h  UsersID.h
doc/: API.md  schedules_id.json  users_id.json
